fix: rtl-text-alignment

--- a/app/assets/stylesheets/rtl_layout.scss
+++ b/app/assets/stylesheets/rtl_layout.scss
@@ -3,4 +3,12 @@
     margin-right: auto;
     margin-left: 0;
   }
+
+  .text-start {
+    text-align: right !important;
+  }
+
+  .footer-social-icon-text {
+    margin-right: 15px !important;
+  }
 }
